fixed forgotPW dark mode

--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -1,21 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Calistoga&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Calistoga&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Calistoga&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Calistoga&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Calistoga&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Calistoga&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lilita+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Satisfy&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
-.flexContainer>h1 {
-  font-family: 'Satisfy', cursive;
+.flexContainer > h1 {
+  font-family: "Satisfy", cursive;
   font-weight: 700;
   font-size: 36px;
-  background: -webkit-linear-gradient(rgba(164, 149, 128, 1),#8D7A5B );
+  background: -webkit-linear-gradient(rgba(164, 149, 128, 1), #8d7a5b);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -66,15 +66,15 @@
 
 .flexContainer {
   display: flex;
-  align-items: center; 
+  align-items: center;
   justify-content: center;
   gap: 10px;
   font-size: 30px;
 }
 
 .cart {
-  width: 40px; 
-  height: 40px; 
+  width: 40px;
+  height: 40px;
   cursor: pointer;
 }
 /* .menuContainer {
@@ -141,8 +141,18 @@
   border-radius: 50px 50px 0px 0px;
 }
 
+.flexContainer > img {
+  height: 50px;
+  width: 50px;
+}
+
 @media (max-width: 600px) {
-  h1{
-    font-size: 28px;
+  .flexContainer > h1 {
+    font-size: 25px;
+  }
+
+  .flexContainer > img {
+    height: 32px;
+    width: 32px;
   }
 }
